--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,34 @@ body {
   background-size: 40px 40px;
   background-position: -19px -19px;
 }
+
+
+.copy:hover::before {
+  content: "Copy";
+}
+.copied::before {
+  content: "Copied!";
+}
+
+.copy:hover::before, .copied::before {
+  position: absolute;
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-weight: bold;
+  background-color: rgba(255,255,255,0.8);
+  padding: 10px;
+  border-radius: 5px;
+  color: rgb(34, 137, 168);
+  transform: translateX(-40px);
+  width: fit-content;
+}
+
+.copy:hover::after, .copied::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid rgba(255,255,255,0.8);
+  transform: translateX(-33px);
+}
