--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,13 @@ body {
   border-left: 7px solid rgba(255,255,255,0.8);
   transform: translateX(-33px);
 }
+
+.avatar-maker::after {
+  content: "";
+  position: absolute;
+  width: 150px;
+  height: 40px;
+  background-color: rgba(255,255,255,0.4);
+  transform: rotate(-3deg) translate(-50%, -60%);
+  left: 50%;
+}
