--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 :root {
   --foreground-rgb: 70, 70, 70;
   --background-rgb: 244, 240, 232;
-  --background-dots-rgb: 100, 100, 100;
+  --background-dots-rgb: 175, 175, 175;
 }
 
 .dark {
@@ -27,6 +27,43 @@ body {
   background-size: 40px 40px;
   background-position: -19px -19px;
 }
+
+
+/* SCROLL BAR STYLE */
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(var(--background-dots-rgb), 0.6) rgb(var(--background-rgb));
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+div.example ::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(var(--background-dots-rgb), 0.6);
+  border-radius: 14px;
+  border: 2px solid rgb(var(--background-rgb));
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(var(--background-dots-rgb), 1);
+}
+
+
 
 
 .copy:hover::before {
@@ -68,3 +105,81 @@ body {
   transform: rotate(-3deg) translate(-50%, -60%);
   left: 50%;
 }
+
+
+
+.documentation {
+  font-size: 18px;
+}
+
+.documentation > section {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.documentation > section > * {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.documentation h1 {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.documentation h2 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.documentation a {
+  color:#06b6d4;
+  font-weight: 700;
+}
+
+.documentation a:hover {
+  text-decoration: underline;
+}
+
+.documentation hr {
+  border-top: 2px solid rgb(156 163 175 / 0.2);
+}
+
+.documentation em {
+  font-style: normal;
+  font-weight: bold;
+  color: #f59e0b;
+}
+
+.documentation code {
+  background-color: rgb(220, 220, 220);
+  color: rgb(70, 70, 70);
+  font-family: monospace;
+  padding: 2px 4px;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.dark .documentation code {
+  background-color: rgb(70, 70, 70);
+  color: rgb(220, 220, 220);
+}
+
+.documentation .query-list-heading {
+  font-weight: bold;
+}
+
+.documentation .query-list ul{
+  font-size: 16px;
+}
+
+.documentation .query-list ul li {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.documentation .examples > * {
+  margin-bottom: 12px;
+}
+
